<resources>

    <!-- Project name -->
    <array name="school_category">
        <item>Primary</item>
        <item>Upper primary</item>
    </array>


    <array name="state">
        <item>Andra pradesh</item>
        <item>Uttar pradesh</item>
        <item>bihar</item>
        <item>Haryana</item>
    </array>
    <array name="district">
        <item>Ambedkar Nagar</item>
        <item>Lucknow</item>
        <item>Gorakhpur</item>
    </array>
    <string name="app_name_new">Beauty App</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_first_name">Firstname</string>
    <string name="lbl_school_code">School Code</string>
    <string name="lbl_school_name">School Name</string>
    <string name="lbl_school_category_">School Category</string>

    <string name="lbl_school_management_">School Management</string>
    <string name="lbl_school_location_">Location</string>
    <string name="lbl_school_type_">School Type</string>
    <string name="lbl_last_name">Lastname</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_sign_in">Sign In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_select_location">Select Location</string>
    <string name="title_select_category">Select Categories</string>
    <string name="image">image</string>
    <string name="menu_gallery">GALLERY</string>
    <string name="menu_info">Info</string>
    <string name="menu_details">DETAIL</string>
    <string name="menu_offers">OFFER</string>
    <string name="skip">Skip</string>
    <string name="forgot">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="who_we_are_title">Who we are</string>
    <string name="cont1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="emailUs">Email Us</string>
    <string name="contact_email">beautyapp@beautylink.com</string>
    <string name="callUs">Call Us</string>
    <string name="contact_num">+91 98765 43210</string>
    <string name="website">Website</string>
    <string name="website_link">www.beautylink.com</string>
    <string name="lbl_conf_password">Confirm Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="no_internet_connection">No internet connection. Please check your internet connection.</string>
    <string name="setting">Setting</string>
    <string name="wifi">Wifi</string>
    <string name="card">Card</string>
    <string name="tv">TV</string>
    <string name="ac">AC</string>
    <string name="parking">Parking</string>
    <string name="offers">Offers</string>
    <string name="off">Off</string>
    <string name="amenities">Amenities</string>
    <string name="km_away">0 KM Away</string>
    <string name="dont_have_acc">Dont have an account ?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="nav_offers">Offers</string>
    <string name="bookings">Bookings</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_email_id">beauty@beauty.com</string>
    <string name="location">Location</string>
    <string name="change_language">Change Language</string>
    <string name="changepassword">Change Password</string>
    <string name="change_category">Change Category</string>
    <string name="changelocation">Change Location</string>
    <string name="pushnotification">Push Notification</string>
    <string name="welcome_guest">WelCome Guest!</string>
    <string name="kmaway">km away</string>
    <string name="cancel">Cancel</string>
    <string name="Profile">Profile</string>
    <string name="Offers">Offers</string>
    <string name="Off">% Off</string>

    <string name="Bookings">Bookings</string>
    <string name="AboutUs">About Us</string>
    <string name="notification">Notification</string>
    <string name="str_enter_mobile_number">Please enter mobile number</string>
    <string name="str_valid_mobile_number">Mobile number should contain 8 to 13 digits</string>
    <string name="str_enter_first_name">Please enter first name</string>
    <string name="str_enter_last_name">Please enter last name</string>
    <string name="str_enter_feedback">Please enter feedback</string>
    <string name="str_enter_email">Please enter email</string>
    <string name="str_valid_email_enter">Please enter Valid email</string>
    <string name="str_enter_password">Please enter password</string>
    <string name="str_enter_cnf_password">Please enter confirm password</string>
    <string name="str_enter_new_password">Please enter new password</string>
    <string name="str_enter_password_must_have_six_character">Password must have 6 or more characters </string>
    <string name="str_enter_new_password_must_have_six_character">New Password must have 6 or more characters </string>
    <string name="str_enter_confrim_password_must_have_six_character">Confirm password must have 6 or more characters</string>
    <string name="str_confrim_password">Please enter confirm password</string>
    <string name="str_pass_and_conf_pass_does_not_match">Password and confirm password does not match</string>
    <string name="please_select_date">Please select date</string>
    <string name="Please_select_time">Please select time</string>
    <string name="are_you_sure_cancel_booking">Are you sure to cancel this booking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="atleast_one_category">Please select atleast one category.</string>
    <string name="selected_item">Selected Item :</string>
    <string name="login_before_review">Please login in your account before giving review.</string>
    <string name="enter_review">Please enter review.</string>
    <string name="enter_ratting">Please select ratting.</string>
    <string name="select_atlease_one_staff">Please select atleast one staff.</string>
    <string name="select_atlease_one_service">Please select atleast one service.</string>
    <string name="save_time_with_us">Save Your Time With Us</string>
    <string name="book_from_anywhere">Book From Anywhere</string>
    <string name="satisfaction_gurantee">100% Satisfaction Guarantee</string>

    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="str_email">Email</string>
    <string name="str_get_service_at_home">Get Service at home</string>
    <string name="any">Any</string>

    <!--New design-->
    <string name="str_drop_location">Drop Location</string>
    <string name="done">Done</string>
    <string name="services">Services</string>

    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="orconnect">Or Connect</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="mobile">Mobile</string>
    <string name="already_acc">Already have account</string>
    <string name="pls_enter_reg">Please Enter Register</string>
    <string name="email_id">Email Id</string>
    <string name="letsCreat">Lets Create</string>


    <string name="a_new_account">New Account</string>
    <string name="check_connection">Check your network connection</string>
    <string name="please_wait">Please wait...</string>
    <string name="link">wwww.beautyapp.com</string>
    <string name="reset_pass">Reset Your Password</string>
    <string name="select_location">Select My Location</string>
    <string name="search_location">Search Location</string>
    <string name="we_sent_code">We have sent a four digit code on your email.</string>
    <string name="no_result_found">No Result found</string>
    <string name="next">Next</string>
    <string name="book_service">Book Service</string>
    <string name="co_select_service">Select Services</string>
    <string name="co_select_staff">Select Staff</string>
    <string name="co_time">Time</string>
    <string name="co_payment">Payment</string>
    <string name="paynow">Paynow</string>
    <string name="closed">Closed</string>
    <string name="select_time_slote">Select Time Slote</string>
    <string name="select_date">Select date</string>
    <string name="booking_details">Booking Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="salon_artist">Salon Artist</string>
    <string name="total">Total : </string>
    <string name="pending">Pending</string>
    <string name="submit_review">Submit Review</string>
    <string name="write_review">Write Review</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="to">To</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="view_review">View Review</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="previous">Previous</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="store_closed">Store was closed on</string>

    <string name="reset_your_password">Reset Your Password</string>

    <string name="sendt_code">We have sent four digit code on your mail.</string>

    <string name="lbl_address">Address</string>

</resources>
